--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -46,3 +46,5 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/ProjectA.CarPawn.MovementReplicator",NewName="/Script/ProjectA.CarPawn.MovementReplicatorComponent")
++PropertyRedirects=(OldName="/Script/ProjectA.Projectile.Collider",NewName="/Script/ProjectA.Projectile.CollisionCOmponent")
++PropertyRedirects=(OldName="/Script/ProjectA.Projectile.MeshComp",NewName="/Script/ProjectA.Projectile.MeshComponent")
