--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,11 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+GameDefaultMap=/Game/Level/LobbyLevel.LobbyLevel
 
 
 EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
+ServerDefaultMap=/Game/Level/DebugLevel.DebugLevel
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -46,5 +47,7 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/ProjectA.CarPawn.MovementReplicator",NewName="/Script/ProjectA.CarPawn.MovementReplicatorComponent")
-+PropertyRedirects=(OldName="/Script/ProjectA.Projectile.Collider",NewName="/Script/ProjectA.Projectile.CollisionCOmponent")
++PropertyRedirects=(OldName="/Script/ProjectA.Projectile.Collider",NewName="/Script/ProjectA.Projectile.CollisionComponent")
 +PropertyRedirects=(OldName="/Script/ProjectA.Projectile.MeshComp",NewName="/Script/ProjectA.Projectile.MeshComponent")
++PropertyRedirects=(OldName="/Script/ProjectA.Projectile.CollisionCOmponent",NewName="/Script/ProjectA.Projectile.CollisionComponent")
+
