--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 GameDefaultMap=/Game/Level/LobbyLevel.LobbyLevel
 
 
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/Level/DebugLevel.DebugLevel
 ServerDefaultMap=/Game/Level/DebugLevel.DebugLevel
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
