--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -78,16 +78,29 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Use",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +ActionMappings=(ActionName="Use",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="SwitchBlend",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
-+AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
++ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=GenericUSBController_Button6)
++ActionMappings=(ActionName="Use",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=GenericUSBController_Button7)
++ActionMappings=(ActionName="SwitchBlend",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=GenericUSBController_Button5)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=SpaceBar)
 +AxisMappings=(AxisName="MoveRIght",Scale=1.000000,Key=D)
-+AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRIght",Scale=-1.000000,Key=A)
-+AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=SpaceBar)
-+AxisMappings=(AxisName="MoveUp",Scale=-1.000000,Key=LeftControl)
++AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="MoveUp",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="MoveForward",Scale=0.000000,Key=LeftControl)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=GenericUSBController_Button8)
++AxisMappings=(AxisName="MoveRIght",Scale=2.000000,Key=GenericUSBController_Axis4)
++AxisMappings=(AxisName="MoveUp",Scale=2.000000,Key=GenericUSBController_Axis3)
++AxisMappings=(AxisName="CursourMoveY",Scale=2.000000,Key=GenericUSBController_Axis1)
++AxisMappings=(AxisName="CursourMoveX",Scale=2.000000,Key=GenericUSBController_Axis2)
++AxisMappings=(AxisName="checker",Scale=1.000000,Key=GenericUSBController_Axis5)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
 +ConsoleKeys=@
+
+[/Script/RawInput.RawInputSettings]
++DeviceConfigurations=(VendorID="0x054C",ProductID="0x05C4",AxisProperties=((Key=GenericUSBController_Axis1),(Key=GenericUSBController_Axis2),(Key=GenericUSBController_Axis3),(Key=GenericUSBController_Axis4),(Key=GenericUSBController_Axis5),(Key=GenericUSBController_Axis6),(Key=GenericUSBController_Axis7),(Key=GenericUSBController_Axis8)),ButtonProperties=((Key=GenericUSBController_Button1),(Key=GenericUSBController_Button2),(Key=GenericUSBController_Button3),(Key=GenericUSBController_Button4),(Key=GenericUSBController_Button5),(Key=GenericUSBController_Button6),(Key=GenericUSBController_Button7),(Key=GenericUSBController_Button8),(Key=GenericUSBController_Button9),(Key=GenericUSBController_Button10),(Key=GenericUSBController_Button11),(Key=GenericUSBController_Button12),(Key=GenericUSBController_Button13),(Key=GenericUSBController_Button14),(Key=GenericUSBController_Button15),(Key=GenericUSBController_Button16),(Key=GenericUSBController_Button17),(Key=GenericUSBController_Button18),(Key=GenericUSBController_Button19),(Key=GenericUSBController_Button20)))
+bRegisterDefaultDevice=True
 
