--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -81,6 +81,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=GenericUSBController_Button6)
 +ActionMappings=(ActionName="Use",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=GenericUSBController_Button7)
 +ActionMappings=(ActionName="SwitchBlend",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=GenericUSBController_Button5)
++ActionMappings=(ActionName="Ready",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="Ready",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=GenericUSBController_Button1)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=SpaceBar)
 +AxisMappings=(AxisName="MoveRIght",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRIght",Scale=-1.000000,Key=A)
