add button hint ui

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,6 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+AccuCities_Textured.png
+West_Missile_FFAR.png
+Content/VigilanteContent/
