--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -50,6 +50,10 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectA.Projectile.Collider",NewName="/Script/ProjectA.Projectile.CollisionComponent")
 +PropertyRedirects=(OldName="/Script/ProjectA.Projectile.MeshComp",NewName="/Script/ProjectA.Projectile.MeshComponent")
 +PropertyRedirects=(OldName="/Script/ProjectA.Projectile.CollisionCOmponent",NewName="/Script/ProjectA.Projectile.CollisionComponent")
++PropertyRedirects=(OldName="/Script/ProjectA.CarPawn.isGoal",NewName="/Script/ProjectA.CarPawn.bGoal")
++PropertyRedirects=(OldName="/Script/ProjectA.CarPawn.bIsGoal",NewName="/Script/ProjectA.CarPawn.bGoal")
++PropertyRedirects=(OldName="/Script/ProjectA.InventoryComponent.BlendType",NewName="/Script/ProjectA.InventoryComponent.UpgradeType")
++PropertyRedirects=(OldName="/Script/ProjectA.Projectile.stanTime",NewName="/Script/ProjectA.Projectile.StanTime")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
